--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
         <springfox.version>2.8.0</springfox.version>
         <mybatis-spring-boot.version>1.3.2</mybatis-spring-boot.version>
+        <shiro-spring-boot.version>1.4.0</shiro-spring-boot.version>
     </properties>
 
     <repositories>
@@ -150,6 +151,12 @@
                 <version>${mybatis-spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring-boot-web-starter</artifactId>
+                <version>${shiro-spring-boot.version}</version>
             </dependency>
 
         </dependencies>
