--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.wuda</groupId>
     <artifactId>project-dependency</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <description>统一管理项目依赖</description>
@@ -26,6 +26,7 @@
         <shiro-spring-boot.version>1.4.0</shiro-spring-boot.version>
         <javapoet.version>1.11.1</javapoet.version>
         <koloboke.version>1.0.0</koloboke.version>
+        <commons.cli.version>1.4</commons.cli.version>
     </properties>
 
     <repositories>
@@ -226,6 +227,12 @@
                 <artifactId>koloboke-impl-jdk8</artifactId>
                 <version>${koloboke.version}</version>
                 <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons.cli.version}</version>
             </dependency>
 
         </dependencies>
