--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 
     <scm>
         <url>https://github.com/wuda0112/yhan-spring-boot-based-parent</url>
+        <developerConnection>scm:git:https://github.com/wuda0112/yhan-spring-boot-based-parent.git</developerConnection>
+        <tag>release</tag>
     </scm>
 
     <developers>
@@ -51,6 +53,7 @@
     <properties>
         <!--plugins-->
         <gpg.plugin.version>1.6</gpg.plugin.version>
+        <release.plugin.version>2.5.3</release.plugin.version>
 
         <!--dependencies-->
         <java.version>1.8</java.version>
@@ -133,6 +136,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${release.plugin.version}</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
+                </configuration>
             </plugin>
         </plugins>
 
