--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.wuda0112</groupId>
     <artifactId>yhan-spring-boot-based-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <description>基于spring boot,统一管理依赖和插件.</description>
@@ -14,7 +13,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <licenses>
@@ -29,7 +28,7 @@
         <url>https://github.com/wuda0112/yhan-spring-boot-based-parent</url>
         <developerConnection>scm:git:git@github.com:wuda0112/yhan-spring-boot-based-parent.git</developerConnection>
         <connection>scm:git:git@github.com:wuda0112/yhan-spring-boot-based-parent.git</connection>
-        <tag>release</tag>
+        <tag>release-1.0.1</tag>
     </scm>
 
     <developers>
