--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.wuda0112</groupId>
     <artifactId>yhan-spring-boot-based-parent</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <description>基于spring boot,统一管理依赖和插件.</description>
@@ -28,7 +28,7 @@
         <url>https://github.com/wuda0112/yhan-spring-boot-based-parent</url>
         <developerConnection>scm:git:git@github.com:wuda0112/yhan-spring-boot-based-parent.git</developerConnection>
         <connection>scm:git:git@github.com:wuda0112/yhan-spring-boot-based-parent.git</connection>
-        <tag>release-1.0.1</tag>
+        <tag>release</tag>
     </scm>
 
     <developers>
